--- a/app/views/my/tracks/_show_mentored_mode.html.haml
+++ b/app/views/my/tracks/_show_mentored_mode.html.haml
@@ -17,14 +17,14 @@
 
           .side
             .completed #{@num_solved_side_exercises} / #{@num_side_exercises}
-            %h3 Extra exercises completed
+            %h3 Practice exercises completed
             .squares
               -@num_side_exercises.times do |i|
                 -if i < @num_solved_side_exercises
                   .square.completed
                 -else
                   .square
-            =link_to "See all extra exercises", "#side-exercises", class: 'pure-button'
+            =link_to "See all practice exercises", "#side-exercises", class: 'pure-button'
 
           .topics
             %h3 Concepts
